syntax = "proto3";

package awakari.source.telegram;

option go_package = "api/grpc/source/telegram";

import "google/protobuf/timestamp.proto";

service Service {
  rpc Read(ReadRequest) returns (ReadResponse);
}

message ReadRequest {
  string link = 1;
}

message ReadResponse {
  Channel channel = 1;
}

message Channel {
  int64 id = 1;
  string groupId = 2;
  string userId = 3;
  string name = 4;
  string link = 5;
  string subId = 6;
  string terms = 7;
  google.protobuf.Timestamp last = 8;
  google.protobuf.Timestamp created = 9;
}
